# SafeTemp

./: .gitignore  CMakeLists.txt  COPYING  Example.cfg  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  SafeTemp.cpp  Types.hpp  config.h.in  configure  configure.ac  makefile
Modules.cmake/: FindNCurses.cmake  FindSensors.cmake
Sensors/: SensorClass.hpp
UserInterface/: GTKInterface.h  GTKInterface.hpp  Graph.h  Graph.hpp  GuiDataHandler.h  Main.ui  Manager.h  Manager.hpp  UI.h  UI.hpp  WinMan.h  WinMan.hpp
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
